remove need for unique ID on fullbox

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<div class="m-p-g">
 			<!-- GALLERY THUMBNAILS -->
-			<div class="m-p-g__thumbs google-image-layout" data-google-image-layout data-max-height="350" data-fullbox="m-p-g-fullscreen">
+			<div class="m-p-g__thumbs google-image-layout" data-google-image-layout data-max-height="350">
 					<img src="http://unsplash.it/600/400?image=198" data-full="http://unsplash.it/1200/800?image=198" class="m-p-g__thumbs-img" />
 					<img src="http://unsplash.it/640/450?image=202" data-full="http://unsplash.it/1280/900?image=202" class="m-p-g__thumbs-img" />
 					<img src="http://unsplash.it/550/420?image=420" data-full="http://unsplash.it/1100/840?image=420" class="m-p-g__thumbs-img" />
@@ -37,7 +37,7 @@
 					<img src="http://unsplash.it/790/390?image=329" data-full="http://unsplash.it/1580/780?image=329" class="m-p-g__thumbs-img" />
 			</div>
 
-			<div class="m-p-g__fullscreen" id="m-p-g-fullscreen">
+			<div class="m-p-g__fullscreen">
 				<!-- FULL SIZE IMAGES GET APPENDED HERE -->
 			</div>
 
