--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 			.demo-btn:hover {
 				background: rgba(0,0,0,0.12);
 			}
+
+			@media (max-width: 640px) {
+
+				.demo-btn {
+					min-width: 0;
+					font-size: 14px;
+				}
+			}
 		</style>
 	</head>
 	<body>
