put example in example directory

--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 		<title>Material Photo Gallery</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-		<link rel="stylesheet" href="./dist/css/material-photo-gallery.css">
+		<link rel="stylesheet" href="../dist/css/material-photo-gallery.css">
 
 		<style>
 			/* DEMO */
@@ -52,8 +52,8 @@
 	<body>
 		<h2>Material Photo Gallery</h2>
 		<p>
-			<a href="https://github.com/ettrics/material-photo-gallery" class="demo-btn">Documentation</a>
-			<a href="https://github.com/ettrics/material-photo-gallery/archive/master.zip" class="demo-btn" download="material-photo-gallery">Download</a>
+			<a href="https://github.com/TrueValentine/material-photo-gallery" class="demo-btn">Documentation</a>
+			<a href="https://github.com/TrueValentine/material-photo-gallery/archive/master.zip" class="demo-btn" download="material-photo-gallery">Download</a>
 		</p>
 
 		<div class="m-p-g">
@@ -72,7 +72,7 @@
 			<div class="m-p-g__fullscreen"></div>
 		</div>
 
-		<script src="./dist/js/material-photo-gallery.js"></script>
+		<script src="../dist/js/material-photo-gallery.js"></script>
 		<script>
 			var elem = document.querySelector('.m-p-g');
 
